--- a/Project2.build_log.htm
+++ b/Project2.build_log.htm
@@ -21,15 +21,15 @@ Target DLL:      UL2CM3.DLL V1.160.3.0
 Dialog DLL:      TARMP1.DLL V1.26.0.0
  
 <h2>Project:</h2>
-N:\MTE241\Project4\Project2.uvproj
-Project File Date:  06/28/2018
+N:\MTE241Project\MTE241-Project3-master\Project2.uvproj
+Project File Date:  07/09/2018
 
 <h2>Output:</h2>
 *** Target 'Target 1' uses RTOS support that is part of a Legacy Pack.
     The Legacy Pack is not installed on your computer - 
     to download the missing Legacy Pack visit: www.keil.com/mdk5/legacy
 *** Build aborted.
-Build Time Elapsed:  00:00:00
+Build Time Elapsed:  00:00:01
 </pre>
 </body>
 </html>
